 * Modified bug action buttons to be more consistent.
 * Modified version string to be longer.
 * Modified html functions to consolidate code.
 * Modified confirm messages to consolidate localization strings.
 * Modified comments to use one # instead of ### (save space)
 * Modified alternate_colors() to have default parameters.
 * Modified all files to use <?php instead of <?
 * Added view by page feature.
 * Added edit new link in news update page.
 * Added file upload into database.
 * Added a link to Mantis at the bottom of the pages.
 * Added support for date_order field for version.
 * Added delete file capability.
 * Added view all projects capability.
 * Added support to move bugs from one project to another.
 * Added email check to admin_check.php3
 * Removed site_settings pages.
 * Removed unused cookie variables.
 * Removed sql_to_unix_time() function.  Unecessary with removal of TIMESTAMPS.
 * Removed menu_inc.php file and related variable.  Moved this into print_menu().
 * Removed print_mantis_version().  Moved it into print_foooter().
 * Renamed g_store_file_to to g_file_upload_method.
 * Renamed files to .php
 * Removed admin_cookiecheck.php3
 * Moved documents into doc/ subdirectory.
 * Moved language files into lang/ subdirectory.

12.01.2001  -   0.16.1

 * Fixed SQL error when reporting bug in a private project.
 * Fixed problem where upgrade scripts were not executed for 0.16.0 upgrade.
 * Fixed problem with $g_limit_reporters limiting all users instead of just reporters and below
 * Modified admin_check.php3 to be more informative and useful.
 * Modified upgrade script to preserve timestamp fields.
 * Modified db_generate to enable projects by default.
 * Modified account_page.php3 to remove EOF usage.
 * Updated upgrade script to be more informative.
 * Updated French localization.
 * Added $g_allow_close_immediately to toggle "close immediately" option when resolving a bug.

11.27.2001  -   0.16.0
