@@ -8,15 +8,21 @@
 ?>
 <?
 	# new strings:
-	$s_no_file_specified = "ERROR: No file specified";
 	$s_all_projects = "All Projects";
 	$s_move_bugs = "Move Bugs";
 	$s_operation_successful = "Operation successful.";
 
+	# ERROR strings
+	$MANTIS_ERROR[ERROR_SQL] = "ERROR: SQL error detected.  Please report this to ";
+	$MANTIS_ERROR[ERROR_LOGIN] = "ERROR: your account may be disabled or the username/password you entered is incorrect.";
+	$MANTIS_ERROR[ERROR_REPORT] = "ERROR: There was an error in your report.";
+	$MANTIS_ERROR[ERROR_NO_FILE_SPECIFIED] = "ERROR: No file specified";
+	$MANTIS_ERROR[ERROR_DUPLICATE_CATEGORY] = "ERROR: This is a duplicate category.";
+	$MANTIS_ERROR[ERROR_DUPLICATE_VERSION] = "ERROR: This is a duplicate version.";
+
 	# General Strings
 	$s_go_back = "Go Back";
 	$s_proceed = "Click here to proceed";
-	$s_sql_error_detected = "ERROR: SQL error detected.  Please report this to ";
 
 	$s_switch = "Switch";
 	$s_logged_in_as = "Logged in as";
@@ -256,7 +262,6 @@
 	$s_click_to_login = "Click here to login";
 
 	# login.php3
-	$s_login_error_msg = "There was an error: your account may be disabled or the username/password you entered is incorrect.";
 
 	# login_page.php3
 	$s_login_page_info = "Welcome to the bugtracker.";
@@ -315,7 +320,6 @@
 	$s_project_added_msg = "Project has been successfully added...";
 
 	# manage_project_category_add.php3
-	$s_duplicate_category = "ERROR: This is a duplicate category.";
 	$s_category_added_msg = "Category has been successfully added...";
 
 	# manage_project_category_delete.php3
@@ -366,7 +370,6 @@
 	$s_project_updated_msg = "Project has been successfully updated...";
 
 	# manage_project_version_add.php3
-	$s_duplicate_version = "ERROR: This is a duplicate version.";
 	$s_version_added_msg = "Version has been successfully added...";
 
 	# manage_project_version_delete.php3
@@ -503,7 +506,6 @@
 	$s_updated_user_msg = "Successfully updated user";
 
 	# report_add.php3
-	$s_report_add_error_msg = "ERROR: There was an error in your report.";
 	$s_must_enter_category = "You must select a category";
 	$s_must_enter_severity = "You must select a severity";
 	$s_must_enter_reproducibility = "You must select a reproducibility";
