@@ -19,7 +19,7 @@
 <p>
 <div align="center">
 <form method="post" action="<?php echo $g_set_project ?>">
-<table class="width50" cellspacing="0">
+<table class="width50" cellspacing="1">
 <tr>
 	<td class="form-title" colspan="2">
 		<?php echo $s_login_title ?>
