@@ -59,7 +59,7 @@
 	if ( $result ) {					# SUCCESS
 		PRINT "$s_operation_successful<p>";
 	} else if ( is_duplicate_category( $f_category, $f_project_id )) {
-		PRINT "$s_duplicate_category<p>";
+		PRINT $MANTIS_ERROR[ERROR_DUPLICATE_CATEGORY]."<p>";
 	} else {							# FAILURE
 		print_sql_error( $query );
 	}
